GENTBE-1402: Fixed jumpy webform progress bar.

--- a/sass/components/_webform.scss
+++ b/sass/components/_webform.scss
@@ -817,12 +817,6 @@ form.webform-client-form {
     float: left;
     min-height: 50px;
   }
-  .sticky-nav-processed {
-    position: relative !important;
-    @include mq($bp-tablet-m){
-      position: fixed !important;
-    }
-  }
 }
 .webform-right {
   .webform-component {
